--- a/web/.htaccess
+++ b/web/.htaccess
@@ -1,5 +1,10 @@
 DirectoryIndex app.php
 
+php_value magic_quotes 0
+php_flag magic_quotes off
+php_value magic_quotes_gpc 0
+php_flag magic_quotes_gpc off
+
 <IfModule mod_rewrite.c>
     RewriteEngine On
 
